--- a/article.html
+++ b/article.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item text-center" tabindex="2">
-                        <a class="nav-link" href="../index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown text-center" tabindex="3">
                         <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
