--- a/about.html
+++ b/about.html
@@ -88,8 +88,94 @@
         <div class="row px-2 py-5">
             <div class="col">
                 <h1>About NASA</h1>
+
+                <p>The National Aeronautics and Space Administration is America’s civil space program and the global leader in space exploration. The agency has a diverse workforce of just under 18,000 civil servants, and works with many more U.S. contractors, academia, and international and commercial partners to explore, discover, and expand knowledge for the benefit of humanity. With an annual budget of $23.2 billion in Fiscal Year 2021, which is less than 0.5% of the overall U.S. federal budget, NASA supports more than 312,000 jobs across the United States, generating more than $64.3 billion in total economic output (Fiscal Year 2019). 
+                <p>At its 20 centers and facilities across the country – and the only National Laboratory in space – NASA studies Earth, including its climate, our Sun, and our solar system and beyond. We conduct research, testing, and development to advance aeronautics, including electric propulsion and supersonic flight. We develop and fund space technologies that will enable future exploration and benefit life on Earth.</p>
+                <p>NASA also leads a Moon to Mars exploration approach, which includes working with U.S. industry, international partners, and academia to develop new technology, and send science research and soon humans to explore the Moon on Artemis missions that will help prepare for human exploration of the Red Planet. In addition to those major missions, the agency shares what it learns so that its information can make life better for people worldwide. For example, companies use NASA discoveries and technologies to create new products for the public. To ensure future success for the agency and the nation, NASA also supports education efforts in STEM with an emphasis on increasing diversity in our future workforce.</p></p>
+
+                <h4 class="pt-3">NASA Leadership</h4>
+                <p>NASA is led by Administrator Bill Nelson, who became the agency's 14th administrator on May 3, 2021. Nelson served in the U.S. Senate for 18 years from Florida and as a payload specialist on space shuttle mission 61-C in 1986.</p>
             </div>
         </div>
+
+        <div class="row px-4 py-5">
+            <div class="jumbotron row w-100 ml-auto mr-auto">
+               <div class="col-lg-3">
+                   <a href="#">
+                       <div class="captioned-img">
+                            <img src="img/about-1.jpg" alt="" class="img-fluid">
+                            <p class="img-caption"><span>NASA 2022</span></p>
+                       </div>
+                   </a>
+               </div>
+               <div class="col-lg-3">
+                    <a href="#">
+                        <div class="captioned-img">
+                            <img src="img/about-2.jpg" alt="" class="img-fluid">
+                            <p class="img-caption"><span>Video: NASA 2022</span></p>
+                        </div>
+                    </a>
+               </div>
+               <div class="col-lg-3">
+                    <a href="#">
+                        <div class="captioned-img">
+                            <img src="img/about-3.jpg" alt="" class="img-fluid">
+                            <p class="img-caption"><span>Careers @NASA</span></p>
+                        </div>
+                    </a>
+               </div>
+               <div class="col-lg-3">
+                    <a href="#">
+                        <div class="captioned-img">
+                            <img src="img/about-4.jpg" alt="" class="img-fluid">
+                            <p class="img-caption"><span>OFfficials and Organizations</span></p>
+                        </div>
+                    </a>
+               </div>
+            </div>
+        </div>
+
+        <div class="row px-2 py-5">
+            <div class="col-lg-4 my-4">
+                <h4>NASA Centers and Facilities</h4>
+                <br>
+                <img src="img/about-5.jpg" alt="" class="img-fluid">
+                <div class="row pt-4">
+                    <div class="col-6">
+                        <button class="btn btn-primary m-1">View Map</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-primary m-1">Visit NASA</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 my-4">
+                <h4>NASA and Small Businesses</h4>
+                <br>
+                <p>NASA is committed to providing all categories of small businesses an opportunity to participate in both NASA prime contracts and subcontracts. </p>
+                <div class="row pt-4">
+                    <div class="col-6">
+                        <button class="btn btn-primary m-1">Programs</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-primary m-1">Paperwork</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 my-4">
+                <h4>Contact Us</h4>
+                <br>
+                <p>Public Communications Office, NASA Headquarters</p>
+                <p>300 E. Street SW, Suite 5R30<br>Washington, DC 20546</p>
+                <p>(202) 358-0001 (Office)<br>(202) 358-4338 (Fax)</p>
+                <div class="row pt-4">
+                    <div class="col-12">
+                        <button class="btn btn-primary m-1">Submit Question</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer>
