--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <meta name="msapplication-config" content="img/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,400;1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Open+Sans:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
@@ -41,44 +41,44 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item text-center active" tabindex="2">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link mx-3" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown text-center" tabindex="3">
-                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link mx-3" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                             Missions
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                        <div class="dropdown-menu mx-3" aria-labelledby="navbarMediaDropdown">
                             <a class="dropdown-item" href="Missions/artemis.html">Artemis</a>
                             <a class="dropdown-item" href="Missions/commercial-crew.html">Commercial Crew</a>
                             <a class="dropdown-item" href="Missions/dart.html">DART</a>
                           </div>
                     </li>
                     <li class="nav-item dropdown text-center" tabindex="4">
-                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link mx-3" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                             Topics
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                        <div class="dropdown-menu mx-3" aria-labelledby="navbarMediaDropdown">
                             <a class="dropdown-item" href="Topics/humans-in-space.html">Humans in Space</a>
                             <a class="dropdown-item" href="Topics/moon-to-mars.html">Moon to Mars</a>
                             <a class="dropdown-item" href="Topics/earth.html">Earth</a>
                           </div>
                     </li>
                     <li class="nav-item dropdown text-center" tabindex="5">
-                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link mx-3" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                             Media
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                        <div class="dropdown-menu mx-3" aria-labelledby="navbarMediaDropdown">
                             <a class="dropdown-item" href="Media/nasa-tv.html">NASA TV</a>
                             <a class="dropdown-item" href="Media/videos.html">Videos</a>
                             <a class="dropdown-item" href="Media/image-gallery.html">Image Gallery</a>
                           </div>
                     </li>
                     <li class="nav-item text-center" tabindex="6">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link mx-3" href="about.html">About</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
-                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search" tabindex="7"></i></button>
+                <form class="form-inline my-2 mx-4 my-lg-0 ml-auto center-on-mobile">
+                    <button class="nav-search-btn my-2" type="submit" onclick="window.location.href='#';"><i class="fa fa-search mx-2" tabindex="7"></i></button>
                     <input class="my-2 p-0 nav-search" type="search" placeholder="Search" aria-label="Search" style="width: auto;" tabindex="8">
                 </form>
             </div>
@@ -86,111 +86,114 @@
     </header>
 
     <!-- Content -->
-    <div class="container py-5">
+    <div class="container mt-4 mb-0">
 
         <!-- Featured Articles -->
         <div class="row px-2 py-5">
-            <div class="col-lg-6">
+            <div class="col-lg-7">
                 <a href="article.html">
                     <h5 class="article-subtitle">Hubble</h5>
-                    <h2 class="article-title">Hubble Sees the Eye of a Colorful Galaxy</h2>
+                    <h2 class="article-recent-title">Hubble Sees the Eye of a Colorful Galaxy</h2>
                     <img class="img-fluid article-img-lg" src="img/home-1.png" width="100%">
                 </a>
-                <p class="article-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...<a href="article.html" class="article-more"><strong>read more</strong></a></p>
-            </div>
+                <p class="article-recent-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...</p>
+                </div>
             
             <!-- Latest Articles -->
-            <div class="col-lg-6">
-                <h2>Latest</h2>
+            <div class="col-lg-5">
                 <ul class="article-list-ver">
                     <li>
-                        <a href="article.html" class="row article-item">
+                        <a href="article.html" class="row article-item my-2">
                             <div class="col-lg-3">
                                 <img class="article-img" src="img/home-2.jpg">
                             </div>
                             <div class="col-lg-9">
                                 <p class="article-subtitle">Webb Telescope<i>3 hours ago</i></p>
-                                <h5 class="article-title">NASA’s Webb Reaches Alignment Milestone, Optics Working Successfully</h5>
+                                <h5 class="article-latest-title">NASA’s Webb Reaches Alignment Milestone, Optics Working Successfully</h5>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="article.html" class="row article-item">
+                        <a href="article.html" class="row article-item my-2">
                             <div class="col-lg-3">
                                 <img class="article-img" src="img/home-3.jpg">
                             </div>
                             <div class="col-lg-9">
                                 <p class="article-subtitle">Spitzer Telescope<i>5 hours ago</i></p>
-                                <h5>NASA Spots Giant Debris Cloud Created by Clashing Celestial Bodies</h5>
+                                <h5 class="article-latest-title">NASA Spots Giant Debris Cloud Created by Clashing Celestial Bodies</h5>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="article.html" class="row article-item">
+                        <a href="article.html" class="row article-item my-2">
                             <div class="col-lg-3">
                                 <img class="article-img" src="img/home-4.jpg">
                             </div>
                             <div class="col-lg-9">
                                 <p class="article-subtitle">Parker Solar Probe<i>10 hours ago</i></p>
-                                <h5>NASA Mourns Passing of Visionary Heliophysicist Eugene Parker</h5>
+                                <h5 class="article-latest-title">NASA Mourns Passing of Visionary Heliophysicist Eugene Parker</h5>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="article.html" class="row article-item">
+                        <a href="article.html" class="row article-item my-2">
                             <div class="col-lg-3">
                                 <img class="article-img" src="img/home-5.jpg">
                             </div>
                             <div class="col-lg-9">
                                 <p class="article-subtitle">Asteroids<i>12 hours ago</i></p>
-                                <h5>NASA System Predicts Impact of Small Asteroid</h5>
+                                <h5 class="article-latest-title">NASA System Predicts Impact of Small Asteroid</h5>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="article.html" class="row article-item">
+                        <a href="article.html" class="row article-item my-2">
                             <div class="col-lg-3">
                                 <img class="article-img" src="img/home-6.jpg">
                             </div>
                             <div class="col-lg-9">
                                 <p class="article-subtitle">Mars<i>13 hours ago</i></p>
-                                <h5>NASA Extends Ingenuity Helicopter Mission</h5>
+                                <h5 class="article-latest-title">NASA Extends Ingenuity Helicopter Mission</h5>
                             </div>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
+        </div>
 
         <!-- Featured Jumbotron -->
-        <div class="row px-4 py-5">
+        <div class="row">
             <a href="Missions/commercial-crew.html" class="jumbotron">
+                <div class="container">
                 <div class="row">
                     <div class="col-6">
-                        <h2 class="jumbotron-title">Upcoming Launch</h2>
+                        <h1 class="jumbotron-title">Upcoming Launch</h1>
                     </div>
                     <div class="col-6">
-                        <p class="jumbotron-subtitle text-uppercase float-right">View All Launches and Landings</p>
+                        <p class="jumbotron-subtitle float-right">View All Launches and Landings</p>
                     </div>
                 </div>
-                <hr class="jumbotron-hr">
+                <hr class="jumbotron-hr mt-0 mb-4">
                <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <img class="article-img" src="img/home-7.png" alt="">
                     </div>
-                    <div class="col-lg-8">
-                        <h3 class="article-title">NASA's SpaceX Crew-4 Mission to the International Space Station</h3>
-                        <h5 class="article-subtitle"><i>Date: No earlier than April 21, 2022</i></h5>
+                    <div class="col-lg-9">
+                        <h2 class="mb-3">NASA's SpaceX Crew-4 Mission to the International Space Station</h2>
+                        <h5 class="jumbotron-date mb-3">Date: No earlier than April 21, 2022</h5>
                         <p class="jumbotron-desc">Missions teams are targeting no earlier than April 21, 2022, for the launch of NASA’s SpaceX Crew-4 mission to the space station for a six-month science mission aboard the microgravity laboratory.</p>
                     </div>
+               </div>
                </div>
             </a>
         </div>
 
         <!-- Article Feed -->
+        <div class="container my-4 mb-5">
         <div class="row px-3 py-5">
-            <div class="col-12 px-0">
-                <h2>All Stories</h2>
+            <div class="col-12 px-3">
+                <h1 class="mb-4">All Stories</h1>
             </div>
             <div class="card-deck">
                 <div class="col-lg-4">
@@ -213,8 +216,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4">    
-                
+                <div class="col-lg-4 mb-4">    
                     <a href="article.html" class="card">
                         <img class="article-img-wide" src="img/home-10.jpg">
                         <div class="card-body">
@@ -229,7 +231,7 @@
                         <img class="article-img-wide" src="img/home-11.jpg">
                         <div class="card-body">
                             <p class="article-subtitle">Webb Telescope<i>Mar 14, 2022</i></p>
-                            <h3 class="card-title">NASA to Discuss Progress as Webb Telescope’s Mirrors Align</h>
+                            <h3 class="card-title">NASA to Discuss Progress as Webb Telescope’s Mirrors Align</h3>
                             <p class="card-text">NASA will hold a virtual media briefing at noon EDT Wednesday, March 16, to provide an update on the James Webb Space Telescope’s mirror alignment. The briefing will air live on NASA TV, the NASA app, and the agency’s website.</p>
                         </div>
                     </a>
@@ -256,6 +258,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <!-- Footer -->
@@ -292,8 +295,8 @@
                 </div>
             </div>
         </div>
-        <div class="w-100">
-            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank"><p class="text-center text-white">Developed by DIG4172C Group 3. All Rights Reserved.</p></a>
+        <div class="w-100 mb-0">
+            <a href="https://github.com/mikojimnz/DIG4172C" target="_blank"><p class="text-center text-white p-3">Developed by DIG4172C Group 3. All Rights Reserved.</p></a>
         </div>
     </footer>
   
