--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -41,40 +41,40 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item text-center" tabindex="2">
-                        <a class="nav-link" href="../index.html">Home</a>
+                        <a class="nav-link mx-xl-3" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown text-center" tabindex="3">
-                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link mx-xl-3" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                             Missions
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                        <div class="dropdown-menu mx-xl-3" aria-labelledby="navbarMediaDropdown">
                             <a class="dropdown-item" href="../Missions/artemis.html">Artemis</a>
                             <a class="dropdown-item" href="../Missions/commercial-crew.html">Commercial Crew</a>
                             <a class="dropdown-item" href="../Missions/dart.html">DART</a>
                           </div>
                     </li>
                     <li class="nav-item dropdown text-center" tabindex="4">
-                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link mx-xl-3" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                             Topics
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                        <div class="dropdown-menu mx-xl-3" aria-labelledby="navbarMediaDropdown">
                             <a class="dropdown-item" href="../Topics/humans-in-space.html">Humans in Space</a>
                             <a class="dropdown-item" href="../Topics/moon-to-mars.html">Moon to Mars</a>
                             <a class="dropdown-item" href="../Topics/earth.html">Earth</a>
                           </div>
                     </li>
                     <li class="nav-item dropdown text-center active" tabindex="5">
-                        <a class="nav-link" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link mx-xl-3" href="#" id="navbarMediaDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                             Media
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarMediaDropdown">
+                        <div class="dropdown-menu mx-xl-3" aria-labelledby="navbarMediaDropdown">
                             <a class="dropdown-item" href="nasa-tv.html">NASA TV</a>
                             <a class="dropdown-item" href="videos.html">Videos</a>
                             <a class="dropdown-item" href="image-gallery.html">Image Gallery</a>
                           </div>
                     </li>
                     <li class="nav-item text-center" tabindex="6">
-                        <a class="nav-link" href="../about.html">About</a>
+                        <a class="nav-link mx-xl-3" href="../about.html">About</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ml-auto center-on-mobile">
